# vigil-backend

./: .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: plan-vigilBackend.prompt.md
app/: __init__.py  main.py
app/core/: __init__.py  config.py  encryption.py
app/db/: database.py  models.py
app/models/: __init__.py  webhooks.py
app/routers/: __init__.py  configure.py  crashlytics.py  docker.py  github.py  sentry.py
app/services/: __init__.py  zoho_cliq.py
